@@ -17,6 +17,7 @@ div.tab {
         box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2);
 }
 
+
 /* Style the buttons inside the tab */
 div.tab button {
     display: block;
@@ -30,6 +31,11 @@ div.tab button {
     cursor: pointer;
     transition: 0.3s;
 }
+
+div.tab, button:disabled {
+    color: #999999 !important;
+}
+
 
 .test {
         display: block;
