@@ -1,6 +1,8 @@
 //based on vertical tab tutorial from: https://www.w3schools.com/howto/howto_js_vertical_tabs.asp
-function changeTab(evt, tabName) {
+function changeTab(tabName) {
     var i, tabcontent, tablinks;
+    var tabButtonName = tabName + "Tab";
+    console.log("tabButtonName: " + tabButtonName);
 
     tabcontent = document.getElementsByClassName("tabcontent");
     for (i = 0; i < tabcontent.length; i++) {
@@ -13,7 +15,6 @@ function changeTab(evt, tabName) {
     }
 
     document.getElementById(tabName).style.display = "block";
-    evt.currentTarget.className += " active";
+    document.getElementById(tabButtonName).className += " active";
+    //evt.currentTarget.className += " active";
 }
-
-document.getElementById("defaultOpen").click();
