@@ -1,3 +1,4 @@
+6/22/17 v6 - Minor changes to sidebar usage, started formatting the getting started page. \n
 6/19/17 v5 - Cosmetic upgrades, start of population interface, cleaned up some javascript. \n
 6/18/17 v4 - Added background page and started to include badges to show form completion. \n
 6/16/17 v3 - Side bar works, added tabbed interface and changelog fade. \n
